--- a/package.json
+++ b/package.json
@@ -7,19 +7,23 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@babel/polyfill": "^7.4.4",
     "express": "^4.17.1",
+    "graphql": "^14.3.1",
+    "graphql-tag": "^2.10.1",
     "infrastructure-components": "{§COMPONENTS_VERSION§}",
     "isomorphic-fetch": "^2.2.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.10.2",
+    "react-apollo": "^2.5.5",
+    "react-dom": "^16.10.2",
     "serverless-http": "^2.1.0"
   },
   "devDependencies": {
     "infrastructure-scripts": "{§SCRIPTS_VERSION§}",
-    "serverless-dynamodb-local": "^0.2.30",
+    "serverless-dynamodb-local": "^0.2.38",
     "serverless-offline": "^4.9.4",
-    "serverless-pseudo-parameters": "^2.4.0",
+    "serverless-pseudo-parameters": "^2.5.0",
     "serverless-single-page-app-plugin": "^1.0.2"
   }
 }
