--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "infrastructure-scripts": "{§SCRIPTS_VERSION§}",
+    "serverless-domain-manager": "^3.3.1",
     "serverless-dynamodb-local": "^0.2.38",
     "serverless-offline": "^4.9.4",
     "serverless-pseudo-parameters": "^2.5.0",
